--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^15",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "^54",
+    "expo-font": "~14.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-status-bar": "~3.0.8",
@@ -21,6 +23,7 @@
     "react-native": "^0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.10.3",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
